# magick

./: Cargo.toml  \  ritual_one.md
api/: Cargo.toml
law/: Cargo.toml
law/src/: alchemy.rs  chakra.rs  hebrew.rs  helpers.rs  main.rs  planet.rs  tarot.rs  tree_of_life.rs  zodiac.rs
law/src/tree_of_life/: paths.rs  sefira.rs
