[package]
name = "law"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
neo4rs = { version = "0.8.0", features = ["json"] }
tokio = { version = "1.41.0", features = ["full"] }
ratatui = { version = "0.28.1", features = ["all-widgets"] }
strum = { version = "0.26.3", features = ["derive"] }
